[bug fix] 3dc14ef caused a layout issue for preformatted blocks

--- a/src/main/webapp/styles/app/fragment-content.css
+++ b/src/main/webapp/styles/app/fragment-content.css
@@ -65,6 +65,7 @@
 
 .fragment-content pre code {
     border: 0;
+    padding: 0;
 }
 
 .fragment-content blockquote p {
